--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,7 @@
 
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bg: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,13 +17,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
+  color: var(--bg);
 }
 
 @layer utilities {
